@@ -5,11 +5,12 @@
 ##' @param fasta fasta file
 ##' @param keyword keyword to be added
 ##' @param suffix logical, true add suffix, false add prefix
+##' @param outfile output file
 ##' @importFrom Biostrings readBStringSet
 ##' @return NULL
 ##' @export
 ##' @author ygc
-addKeywordFASTA <- function(fasta, keyword, suffix=TRUE) {
+addKeywordFASTA <- function(fasta, keyword, suffix=TRUE, outfile=NULL) {
     ff <- readBStringSet(fasta)
     
     if (suffix == TRUE) {
@@ -17,5 +18,9 @@ addKeywordFASTA <- function(fasta, keyword, suffix=TRUE) {
     } else {
         names(ff) <- paste(keyword, names(ff), sep="")
     }
-    writeXStringSet(ff, fasta)
+    if (is.null(outfile)) {
+        writeXStringSet(ff, fasta)
+    } else {
+        writeXStringSet(ff, outfile)
+    }
 }
